# sdlabs_wrapper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sdlabs_wrapper_schema.json
config/: logging.yml  optimization_config.json
examples/battmo_optimization/: optimization_config.json  optimize_battmo_simulation.ipynb
src/sdlabs_wrapper/: __init__.py  config.py  models.py  wrapper.py
