[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sdlabs_wrapper"
version = "0.6.3"
description = "My package description"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["ML", "SDLabs","Battery electrolytes"]
# classifiers = [
#     "Framework :: Django",
#     "Programming Language :: Python :: 3",
# ]
dependencies = [
    "pyyaml",
    "scientia_sdk>=1.2.0",
    "nexus_sdk@git+https://github.com/Atinary-technologies/nexus_sdk@v1.1.1",
    "pre-commit",
    "dataclasses-jsonschema",
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
# include = ["mypackage*"]  # ["*"] by default
exclude = ["tests,sdlabs_sdks_*"]  # empty by default
# namespaces = false  # true by default


# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
generate_sdlabs_schema = "sdlabs_wrapper.models:generate_and_write_schema"
